Added a picture in for testing

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav a:hover {
     background-color: #003366;
 }
 .hero {
-    background: url('https://via.placeholder.com/1200x400?text=Tour+Banner') center/cover no-repeat;
+    background: url('picture/The-Great-Wall-of-China-Beijing-China.jpg') center/cover no-repeat;
     height: 400px;
     display: flex;
     align-items: center;
