--- a/style.css
+++ b/style.css
@@ -135,6 +135,14 @@ body {
     max-width: 800px;
     margin: 0 auto;
 }
+
+.content img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto 1.5em auto;
+  }
+  
 main {
     max-width: 1200px;
     margin: 20px auto;
