--- a/tour_style.css
+++ b/tour_style.css
@@ -280,8 +280,8 @@ body {
       flex-direction: column;
       align-items: stretch;
       gap: 0.5rem;
-      margin-left: 0;
-      margin-right: 0;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
     }
   }
 
