--- a/tour_style.css
+++ b/tour_style.css
@@ -280,8 +280,10 @@ body {
       flex-direction: column;
       align-items: stretch;
       gap: 0.5rem;
-      margin-left: 0.5rem;
-      margin-right: 0.5rem;
+      margin-top: 1rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      margin-bottom: 1rem;
     }
   }
 
